--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -104,7 +104,14 @@
 												data-actions-box="true" data-size="10"
 												data-hide-disabled="false"
 												title="Seleziona un risultato atteso...">
+												<option
+													th:each="risultato, row : ${eventoWrapper.risultatiAttesiMapTemp}"
+													th:value="${risultato.value}"
+													th:unless="${risultato.value == null}"
+													th:text="${risultato.value}">Risultato
+												</option>
 											</select>
+
 										</div>
 									</div>
 
@@ -146,7 +153,7 @@
 												data-width="100%" data-style="btn-primary"
 												data-actions-box="true" data-size="10"
 												data-hide-disabled="false"
-												title="Seleziona una Metodologia Didatticha">
+												title="Seleziona una Metodologia Didattica">
 												<option
 													th:each="metodologiaDidattica, row: ${T(it.tredi.ecm.dao.enumlist.MetodologiaDidatticaRESEnum).values()}"
 													th:value="${metodologiaDidattica}"
@@ -715,9 +722,9 @@
 										<div class='col-md-4 col-sm-4 col-xs-12'></div>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group risultatoAttesoPick">
 											<input type="hidden" th:value="${risultato.key}" />
-											<input id="risultatoAtteso" type="text" class="form-control risultatoPicker"
+											<input type="text" class="form-control risultatoPicker"
 												th:field="${eventoWrapper.risultatiAttesiMapTemp[__${risultato.key}__]}" />
-											<span class="input-group-addon" th:onclick="${row.last ? 'aggiungiRisultatoAtteso(this, ''risultatiAttesiId'')' : 'rimuoviDataIntermedia(this, ''risultatiAttesiId'', ' + risultato.key + ')'}">
+											<span class="input-group-addon" th:onclick="${row.last ? 'aggiungiRisultatoAtteso(this, ''risultatiAttesiId'')' : 'rimuoviRisultatoAtteso(this, ''risultatiAttesiId'', ' + risultato.key + ')'}">
 												<i th:class="${row.last ? 'fa fa-plus' : 'fa fa-minus'}"></i>
 											</span>
 										</div>
@@ -1521,6 +1528,9 @@
 					.done(function(data) {
 						//alert(data);
 					  	$('#' + target).html(data);
+					  	//risale al valore della input
+					  	var value = $(caller).prev().val();
+					  	substituteAllToSelectAttivitaRES("addAttivitaRES-risultatiAttesi", "risultatoPicker");
 					  	reInitComponents();
 					  })
 				  	.fail(function() {
@@ -1535,6 +1545,8 @@
 					.done(function(data) {
 						//alert(data);
 					  	$('#' + target).html(data);
+						var value = $(caller).prev().val();
+					  	removeFromSelectAttivitaRES("addAttivitaRES-risultatiAttesi", value);
 					  	reInitComponents();
 					  })
 				  	.fail(function() {
@@ -1571,7 +1583,7 @@
 				function updateMetodologieDidattiche(caller){
 					var obiettivo = $(caller).val();
 					var metodologiePicker_ref ='#addAttivitaRES-metodolgieDidattiche';
-					var start = [[@{/listaMetodologie?obiettivo=}]];
+					var start = [[@{/listaMetodologieRES?obiettivo=}]];
 					var end = obiettivo;
 					var url = start + end;
 
@@ -1579,6 +1591,7 @@
 					console.log($(metodologiePicker_ref));
 					$.get(url, function(data){
 
+						$(metodologiePicker_ref).selectpicker('deselectAll');
 						$.each($(metodologiePicker_ref + " option"), function() {
 							$(this).hide();
 						});
@@ -1663,15 +1676,35 @@
 					$("#" + target).load(url);
 				}
 
-				function addToSelectAttivitaRES(target,value){
+				function addToSelectAttivitaRES(target, value){
 					var option = '<option value = "' + value + '">' + value + "</option>";
 					$('#' + target).append(option);
 					$('#' + target).prop("disabled", false);
 					$('#' + target).selectpicker('refresh');
 				}
 
-				function removeFromSelectAttivitaRES(target,value){
+				function removeFromSelectAttivitaRES(target, value){
 					$('#' + target +" option[value='" + value + "']").remove();
+					$('#' + target).selectpicker('refresh');
+				}
+
+				function substituteAllToSelectAttivitaRES(target, classSelector) {
+					removeAllFromSelectAttivitaRES(target);
+					$.each($("." + classSelector), function() {
+						var value = this.value;
+						if(value != null && value != "") {
+							var option = '<option value = "' + value + '">' + value + "</option>";
+							$('#' + target).append(option);
+							$('#' + target).prop("disabled", false);
+							$('#' + target).selectpicker('refresh');
+						}
+					})
+				}
+
+				function removeAllFromSelectAttivitaRES(target) {
+					$.each($("#" + target + " option"), function() {
+						this.remove();
+					})
 					$('#' + target).selectpicker('refresh');
 				}
 
