--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -813,13 +813,14 @@
 										<span th:text="#{label.ruoli_coinvolti}">Ruoli Coinvolti</span>
 										<span class="required">*</span>
 									</label>
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
+									<div class="item form-group" style="clear:both; padding:2px;"></div>
+									<div class="item form-group" style="clear:both">
 										<table class="datatable-responsive-programmaFSC table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 											<thead>
 												<tr>
 													<th th:text="#{label.ruolo}">OBIETTIVO FORMATIVO</th>
 													<th th:text="#{label.codifica}">RISULTATAO ATTESO</th>
-													<th th:text="#{label.numero_partecipant}">METODO DI LAVORO</th>
+													<th th:text="#{label.numero_partecipanti}">METODO DI LAVORO</th>
 													<th th:text="#{label.impegno_complessivo_ore}">RUOLI COINVOLTI</th>
 													<th th:text="#{label.crediti}">ORE ATTIVITA'</th>
 												</tr>
