--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -69,12 +69,19 @@
 			                    </div>
 			           		</th:block>
 			           		<th:block th:if="${showOnly or enableField}">
-			           			<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
+			           			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-10">
 			              			<div class="value" th:text="${providerWrapper.provider.tipoOrganizzatore.nome}"></div>
 		                    	</div>
-		                    	<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}" />
-		                    	</div>
+			           			<div class="col-lg-4 col-md-2 col-sm-6 col-xs-10">
+			                    	<div class="row">
+				                    	<div th:if="${enableField}" class="col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}" />
+				                    	</div>
+										<div th:if="${enableField}" class="col-xs-11">
+											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}__]}"></textarea>
+										</div>
+									</div>
+								</div>
 		                    </th:block>
 		                    <th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -121,12 +128,21 @@
 								</div>
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
+								<div class="col-lg-4 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${providerWrapper.provider.denominazioneLegale}"></div>
 								</div>
-								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}" />
-		                    	</div>
+
+			           			<div class="col-lg-4 col-md-2 col-sm-6 col-xs-10">
+			                    	<div class="row">
+				                    	<div th:if="${enableField}" class="col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}" />
+				                    	</div>
+										<div th:if="${enableField}" class="col-xs-11">
+											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}__]}"></textarea>
+										</div>
+									</div>
+								</div>
+
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
