--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -158,7 +158,7 @@
 				</div>
 			</div>
 
-			<form id="formEventoFAD" class="form-horizontal form-label-left"
+			<form id="formEventoFAD" class="form-horizontal form-label-left form-evento"
 				th:action="@{|/provider/${eventoWrapper.providerId}/evento/save|}"
 				method="post" enctype="multipart/form-data"
 				novalidate="novalidate">
@@ -1071,7 +1071,7 @@
 
 				    //onchange su tipologiaEvento
 					updateObiettivoFormativo($("#tipologia_evento").val())
-					
+
 					initAll();
 				});
 
@@ -1084,10 +1084,10 @@
 
 					//decide cosa mostrare a seconda dei campi già settati dal client
 					showHideCampsFAD();
-					
+
 					//appende ai widget tutti i vari eventListener
 					handleListenerEventsCampsFAD();
-					
+
 					$('#addAttivitaFAD-metodolgieDidattiche').prop('disabled',true);
 					$('#addAttivitaFAD-metodolgieDidattiche').selectpicker('refresh');
 				}
@@ -1174,11 +1174,11 @@
 				function closeModaleAddAttivitaTo(){
 					$("#add-attivitaFAD-modal .close").click();
 					$("#add-attivitaFAD-modal form")[0].reset();
-					
+
 					$.each($("#add-attivitaFAD-modal .selectpicker"),function(){
 						$(this).selectpicker('val','');
 					});
-					
+
 					$('#add-attivitaFAD-modal input[type="checkbox"]').removeAttr('checked').iCheck('update');
 				}
 
@@ -1208,18 +1208,18 @@
 
 				//onchange su tipologiaEvento -> cambia la lista di obiettivi formativi che si possono selezionare.
 				function updateObiettivoFormativo(tipologia){
-					
+
 					if(tipologia != null && tipologia != undefined && tipologia != ''){
 						var obiettivoPicker_ref = '#addAttivitaFAD-obiettiviFormativi';
 						var metodologiePicker_ref ='#addAttivitaFAD-metodolgieDidattiche';
 						//nasconde tutto e toglie i check
 						$(obiettivoPicker_ref).selectpicker('val','');
 						$(metodologiePicker_ref).selectpicker('val','');
-						
+
 						$.each($(obiettivoPicker_ref + " option"), function() {
 							$(this).hide();
 						})
-	
+
 						if (tipologia == "APPRENDIMENTO_INDIVIDUALE_NO_ONLINE") {
 							$.each($(obiettivoPicker_ref + " option"), function() {
 								var str = $(this).attr("value");
