--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -151,7 +151,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<!-- finestra modale di aggiunta ruoloOreFSC a tempAttivitaFSC -->
 				<div id="add-ruoloOreFSC-modal" class="modal fade modal-add-ruoloOreFSC" data-model-index="2" role="dialog">
 					<div class="modal-dialog modal-lg">
@@ -166,7 +166,7 @@
 										th:action="@{|/provider/${eventoWrapper.evento.provider.id}/evento/addRuoloOreFSCTo|}"
 										method="post" enctype="multipart/form-data"
 										novalidate="novalidate">
-	
+
 										<div id="container-ruoloFSC" class="item form-group tempRuoloOreFSC.ruolo">
 											<label class="control-label col-md-3 col-sm-3 col-xs-11" for="ruoloFSC">
 												<span th:text="#{label.ruolo}">Ruolo</span>
@@ -188,7 +188,7 @@
 											</div>
 											<div class="alert col-xs-12 errorMessage"></div>
 										</div>
-	
+
 										<div id="container-tempoDedicato" class="item form-group">
 											<label class="control-label col-md-3 col-sm-3 col-xs-11" for="tempoDedicato">
 												<span th:text="#{label.tempo_dedicato}">Tempo Dedicato</span>
@@ -199,7 +199,7 @@
 													th:field="${eventoWrapper.tempRuoloOreFSC.tempoDedicato}" />
 											</div>
 										</div>
-										
+
 										<!-- fragment da aggiornare -->
 										<input id="targetTableAttivitaFSC" type="text" name="target" style="display: none;" />
 
@@ -213,7 +213,7 @@
 						</div>
 					</div>
 
-			<form id="formEventoFSC" class="form-horizontal form-label-left"
+			<form id="formEventoFSC" class="form-horizontal form-label-left form-evento"
 				th:action="@{|/provider/${eventoWrapper.providerId}/evento/save|}"
 				method="post" enctype="multipart/form-data"
 				novalidate="novalidate">
@@ -755,9 +755,9 @@
 						</div>
 						<div role="tabpanel" class="tab-pane fade" id="tab_content2" aria-labelledby="tab2">
 							<div class="col-xs-12 section-index" id="section-2" th:fragment="section-2">
-							
+
 								<th:block th:if="${eventoWrapper.evento.tipologiaEvento == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).PROGETTI_DI_MIGLIORAMENTO}">
-								
+
 									<!-- SELEZIONE FASI DA INSERIRE -->
 									<div class="item form-group">
 										<label class="control_label col-md-4 col-sm-4 col-xs-11">
@@ -772,9 +772,9 @@
 											</div>
 										</div>
 									</div>
-									
+
 									<div class="divider-dashed"></div>
-									
+
 								</th:block>
 
 								<!-- FASI AZIONI RUOLI -->
@@ -832,7 +832,7 @@
 													<td>
 														<input th:field="${eventoWrapper.riepilogoRuoliFSC[__${riepilogo.key}__].numeroPartecipanti}" />
 													</td>
-					
+
 													<td th:text="${riepilogo.value.tempoDedicato}"></td>
 													<td th:text="${riepilogo.value.crediti}"></td>
 												</tr>
@@ -1230,9 +1230,9 @@
 					//non funziona
 					//$('#sperimentazioneClinicaSiId, #sperimentazioneClinicaNoId').on('change', setEvResOttenutoComitatoEtico);
 					$(".sperimentazioneClinica").on("ifChecked", setEvResOttenutoComitatoEtico);
-					
+
 					$('#addRuoloOreFSC-ruolo').prop('disabled',true);
-					
+
 					initAll();
 				});
 
@@ -1250,7 +1250,7 @@
 					});
 					updateRuoliCoinvolti();
 				}
-				
+
 
 				//eventLister cambio tab
 				$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
@@ -1342,13 +1342,13 @@
 						var data = selectRuoliCoinvolti[val][0];
 
 						for(var item = 0; item < data.length; item++){
-							
+
 							$.each($(ruoliOrePicker_ref + " option"), function() {
 								if($(this).attr("value") == data[item])
 									$(this).show();
 							});
 						}
-						
+
 						$(ruoliOrePicker_ref).selectpicker('refresh');
 					}
 				}; */
@@ -1364,7 +1364,7 @@
 
 						$(selectId).selectpicker('val','');
 						$(selectId).prop('disabled',false);
-						
+
 						$.get(url, function(data){
 
 							$.each($(selectId + " option"), function() {
@@ -1377,7 +1377,7 @@
 										$(this).show();
 								});
 							}
-							
+
 							$(selectId).selectpicker('refresh');
 						});
 					}
@@ -1421,11 +1421,11 @@
 			 	function closeModaleAddAttivitaTo(){
 					$("#add-attivitaFSC-modal .close").click();
 					$("#add-attivitaFSC-modal form")[0].reset();
-					
+
 					$.each($("#add-attivitaFSC-modal .selectpicker"),function(){
 						$(this).selectpicker('val','');
 					}
-					
+
 					$('#add-attivitaFSC-modal input[type="checkbox"]').removeAttr('checked').iCheck('update');
 				}
 
@@ -1507,7 +1507,7 @@
 					default: 	break;
 				}
 			}
-				
+
 				function sendAjaxAddRuoloOreToTemp(){
 					var $form = $('#addRuoloOreFSC');
 					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addRuoloOreToTemp|}]], $('#addRuoloOreFSC').serialize())
@@ -1520,13 +1520,13 @@
 				    	alert( "errorFSC" );
 				 	 })
 				}
-				
+
 				function closeModaleAddRuoloOreFSCTo(){
 					$("#add-ruoloOreFSC-modal .close").click();
 					$("#add-ruoloOreFSC-modal form")[0].reset();
 					$("#add-ruoloOreFSC-modal .selectpicker").selectpicker('val','')
 				}
-				
+
 				function removeRuoloOreFSC(caller){
 					var rowIndex = $(caller).parent().data('row-id');
 					var url = [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/removeRuoloOreToTemp/|}]] + rowIndex;
